Added Markdown cells

--- a/CMA-ES.ipynb
+++ b/CMA-ES.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,13 +20,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reward Function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#chosen reward function for evolutionary algorithm\n",
     "def reward_function(x,y):\n",
     "    return ((x-20)**2 + (y-20)**2)*-1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reward Grid"
    ]
   },
   {
@@ -28,6 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set up grid to graph reward function\n",
     "h,w = 100,100\n",
     "rew_func = np.ones((h, w))\n",
     "for i in range(h):\n",
@@ -36,11 +59,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CMA-ES class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#run CMA-ES algorithm\n",
     "class training_loop():\n",
     "    def __init__(self):\n",
     "        super(training_loop, self).__init__()\n",
@@ -53,6 +84,7 @@
     "        self.cm = .1\n",
     "        self.mean_fac = .9\n",
     "    \n",
+    "    #for a list of samples, get the reward for each sample\n",
     "    def get_rewards(self,tot_list,samples):\n",
     "        x_list, y_list = tot_list.T\n",
     "        rew_list = []\n",
@@ -64,10 +96,12 @@
     "        rew_list.sort(reverse=True)\n",
     "        return rew_list\n",
     "    \n",
+    "    #sample multivariate normal distrubution with mean 0 & std_dev 1\n",
     "    def sample(self):\n",
     "        tot_list = np.random.multivariate_normal(np.zeros(self.mean.shape[0]), np.identity(self.mean.shape[0]), self.samples)\n",
     "        return tot_list\n",
     "    \n",
+    "    #get new basis using gram-Schmidt process s.t. one vector points towards mean\n",
     "    def get_basis(self,v,V):\n",
     "        v = v / np.linalg.norm(v)\n",
     "        r_vec_list = [v]\n",
@@ -83,11 +117,13 @@
     "                \n",
     "        return np.array(r_vec_list)\n",
     "    \n",
+    "    #scales mean and entire matrix by a scalar\n",
     "    def scale_m(self,mean,best_mean):\n",
     "        mean_dif = sum(abs(best_mean-mean))\n",
     "        scale_factor = 2/(1+math.exp(-mean_dif))\n",
     "        return scale_factor\n",
     "    \n",
+    "    #run one iteration of CMA-ES algorithm\n",
     "    def train(self):\n",
     "        #sample from current mean and convariance\n",
     "        tot_list = self.mean + np.matmul(self.sample(),self.cov)*self.cv\n",
@@ -119,6 +155,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run CMA-ES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -132,6 +175,13 @@
     "    x_list, y_list = tot_list.T\n",
     "    training_class.train()\n",
     "    train_lists.append([x_list,y_list])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## All samples"
    ]
   },
   {
@@ -151,11 +201,19 @@
     }
    ],
    "source": [
+    "#graph all samples from each iteration of CMA-ES during training\n",
     "figure(num=None, figsize=(10, 10), dpi=80, facecolor='w', edgecolor='k')\n",
     "plt.imshow(rew_func, cmap='hot', interpolation='nearest')\n",
     "for i in range(epochs):\n",
     "    plt.plot(train_lists[i][0], train_lists[i][1], 'x')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final Sample"
    ]
   },
   {
